finaliza swagger e documenta rotas
